<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check_box_radio_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group7.tcss450.uw.edu.widgetslab.CheckBoxRadioButtonActivity"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:background="@drawable/customborder"
        >

        <RadioButton
            android:text="@string/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioYes"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioNo"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/customborder">

        <CheckBox
            android:text="@string/toppingCheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxCheese"
            android:onClick="onCheckButtonClicked"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/toppingMeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxMeat"
            android:onClick="onCheckButtonClicked"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/toppingSauce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxSauce"
            android:onClick="onCheckButtonClicked"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/toppingVegitables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxVegtables"
            android:onClick="onCheckButtonClicked"
            android:layout_weight="1" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="MakeSelectToast"
            android:id="@+id/select_button" />
    </RelativeLayout>


</LinearLayout>
