<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_text_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group7.tcss450.uw.edu.widgetslab.TextViewActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/text_view_ex1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_message" />

    <TextView
        android:text="@string/text_view_ex_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:id="@+id/textView_phone"/>

    <TextView
        android:text="@string/text_view_ex_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:id="@+id/textView_email" />

</LinearLayout>
